[tool.poetry]
name = "crypto-utils"
version = "0.1.0"
description = ""
authors = ["Tomas Toth <tomas.toth004@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "crypto_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
